tests/cases/errors/dynamic_array_pattern_index_keyed_rejected/main.sv
module Top;
  int arr [];
  initial begin
    arr = '{0: 10, 1: 20};
  end
endmodule
